[package]
name = "gradio"
version = "0.1.1"
edition = "2021"
authors = ["Jacob Lin <jacob@csie.cool>"]
description = "Gradio Client in Rust."
repository = "https://github.com/JacobLinCool/gradio-rs/"
license = "MIT"
keywords = ["gradio", "client", "huggingface"]
categories = ["network-programming"]
readme = "README.md"
documentation = "https://docs.rs/gradio"
homepage = "https://github.com/JacobLinCool/gradio-rs/"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.86"
futures-util = "0.3.30"
mime_guess = "2.0.5"
rand = "0.8.5"
regex = "1.10.5"
reqwest = { version = "0.12.5", features = [
    "rustls-tls",
    "json",
    "cookies",
    "multipart",
] }
reqwest-eventsource = "0.6.0"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
tokio = { version = "1.38.1", features = ["macros", "rt", "rt-multi-thread"] }
