[package]
name = "gradio"
version = "0.2.2"
edition = "2021"
authors = ["Jacob Lin <jacob@csie.cool>"]
description = "Gradio Client in Rust."
repository = "https://github.com/JacobLinCool/gradio-rs/"
license = "MIT"
keywords = ["gradio", "client", "huggingface"]
categories = ["network-programming", "command-line-utilities"]
readme = "README.md"
documentation = "https://docs.rs/gradio"
homepage = "https://github.com/JacobLinCool/gradio-rs/"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "gr"
path = "src/bin/gr.rs"

[dependencies]
anyhow = "1.0.86"
bytes = "1.6.1"
clap = { version = "4.5.10", features = ["cargo", "derive", "string"] }
futures-util = "0.3.30"
mime_guess = "2.0.5"
rand = "0.8.5"
regex = "1.10.5"
reqwest = { version = "0.12.5", features = [
    "rustls-tls",
    "json",
    "cookies",
    "multipart",
], default-features = false }
reqwest-eventsource = "0.6.0"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
tokio = { version = "1.38.1", features = ["macros", "rt", "rt-multi-thread"] }
